Drop issuer environment field
